--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,13 @@ project(dtacan)
 
 cmake_minimum_required(VERSION 2.8.11)
 
-add_library(dtacan
-    src/dtacan/Encoder.h
-    src/dtacan/BaudRate.h
-    src/dtacan/Util.h
-)
+add_library(dtacan INTERFACE)
 
 if (NOT MSVC)
-    target_compile_options(dtacan PUBLIC -std=c++11)
-    target_compile_options(dtacan PRIVATE -Wall -Wextra)
+    target_compile_options(dtacan INTERFACE -std=c++11)
 endif()
 
-target_include_directories(dtacan PUBLIC src)
+target_include_directories(dtacan INTERFACE src)
 
 add_subdirectory(thirdparty/gtest)
 add_subdirectory(tests)
